# AutoResearchforMaterials

./: .gitignore  CLAUDE.md  README.md  materials_project.py  program.md  pyproject.toml  research_agent.py  setup_datascribe.py  train_materials.py
docs/: datascribe_tabm_benchmark.md  materials_project_format.md
examples/: datascribe_manifest_template.csv
examples/tiny_materials/: README.md
examples/tiny_materials/agent/: decision_log.md  edit_scope.json  experiment_log.tsv  experiment_plan.md  research_brief.md
examples/tiny_materials/data/raw/: measurements.csv
examples/tiny_materials/specs/: data_dictionary.csv  model_config.json  project.json
